--- a/one/indicorp.css
+++ b/one/indicorp.css
@@ -15,7 +15,7 @@ body{
     padding: 0;
 }
 header{
-    background-image: url("indicorp/bg-cover.svg");
+    background-image: url("https://avatars.mds.yandex.net/get-zen_doc/100325/pub_5d35c9cd43863f00ad3adc7a_5d35ca0078125e00ad391d8f/scale_1200");
     background-size: cover;
 }
 .header-blog{
